Update package.json and .nvmrc files

--- a/.github/ISSUE_TEMPLATE/improvement_request.yml
+++ b/.github/ISSUE_TEMPLATE/improvement_request.yml
@@ -9,6 +9,13 @@ body:
           value: Tell us about anything that needs improvement or enhancement!
 
     - type: textarea
+      id: context
+      attributes:
+          label: Context
+          description: |
+              Describe the current and expected common context.
+
+    - type: textarea
       id: current
       attributes:
           label: Current
