--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -45,7 +45,8 @@
 		"!dist/**/*.spec.*"
 	],
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "provenance": true
     },
 	"peerDependencies": {
 		"svelte": "^4.0.0"
