--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -44,7 +44,8 @@
         "dist"
     ],
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "provenance": true
     },
     "dependencies": {
         "@master/css": "workspace:^",
