--- a/packages/vscode-language-service/package.json
+++ b/packages/vscode-language-service/package.json
@@ -183,7 +183,8 @@
         }
     },
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "provenance": true
     },
     "devDependencies": {
         "@master/css-language-server": "workspace:^",
