--- a/.github/workflows/pull-request-title-check.yml
+++ b/.github/workflows/pull-request-title-check.yml
@@ -14,8 +14,7 @@ jobs:
             matrix:
                 node-version: [20]
         steps:
-            - name: Aron Actions
-              uses: 1aron/techor@v2.5.17
+            - uses: techor-dev/techor@v2.5.17
               with:
                   action: "check-pull-request-title"
               env:
