--- a/packages/extractor.vite/package.json
+++ b/packages/extractor.vite/package.json
@@ -49,7 +49,8 @@
         "dist"
     ],
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "provenance": true
     },
     "peerDependencies": {
         "vite": ">=5.0.0"
