--- a/packages/extractor.webpack/package.json
+++ b/packages/extractor.webpack/package.json
@@ -45,7 +45,8 @@
         "dist"
     ],
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "provenance": true
     },
     "dependencies": {
         "@master/css": "workspace:^",
