--- a/packages/extractor/package.json
+++ b/packages/extractor/package.json
@@ -62,7 +62,8 @@
         "dist"
     ],
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "provenance": true
     },
     "dependencies": {
         "@master/css": "workspace:^",
