--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -48,7 +48,8 @@
         "dist"
     ],
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "provenance": true
     },
     "dependencies": {
         "@master/css": "workspace:^"
