--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -46,7 +46,8 @@
         "dist"
     ],
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "provenance": true
     },
     "dependencies": {
         "@master/css": "workspace:^",
