--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -1,12 +1,11 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "baseUrl": ".",
         "rootDir": "src",
         "outDir": "dist"
     },
     "include": [
-        "src/**/*",
+        "./src/**/*",
         "./setup-jest.ts"
     ],
     "exclude": [
