--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,43 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true,
-        "moduleResolution": "Node",
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
-        "allowJs": true,
-        "target": "ESNext",
-        "module": "ESNext",
-        "skipLibCheck": true,
-        "declaration": true,
-        "sourceMap": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true,
+        "paths": {
+            "class-variant": [ "./node_modules/class-variant/src" ],
+            "@master/css-cli": [ "./node_modules/@master/css-cli/src" ],
+            "@master/create-css": [ "./node_modules/@master/create-css/src" ],
+            "@master/css": [ "./node_modules/@master/css/src" ],
+            "@master/eslint-config-css": [ "./node_modules/@master/eslint-config-css" ],
+            "@master/eslint-plugin-css": [ "./node_modules/@master/eslint-plugin-css/src" ],
+            "@master/css-extractor": [ "./node_modules/@master/css-extractor/src" ],
+            "@master/css-extractor.vite": [ "./node_modules/@master/css-extractor.vite/src" ],
+            "@master/css-extractor.webpack": [ "./node_modules/@master/css-extractor.webpack/src" ],
+            "@master/css-language-server": [ "./node_modules/@master/css-language-server/src" ],
+            "@master/css-language-service": [ "./node_modules/@master/css-language-service/src" ],
+            "@master/css.nuxt": [ "./node_modules/@master/css.nuxt/src/module.ts" ],
+            "@master/css.react": [ "./node_modules/@master/css.react/src" ],
+            "@master/css-runtime": [ "./node_modules/@master/css-runtime/src" ],
+            "@master/css-server": [ "./node_modules/@master/css-server/src" ],
+            "@master/css.svelte": [ "./node_modules/@master/css-svelte/src/lib" ],
+            "@master/css-validator": [ "./node_modules/@master/css-validator/src" ],
+            "@master/css.vue": [ "./node_modules/@master/css.vue/src" ],
+            "theme-service": [ "./node_modules/theme-service/src" ],
+
+        },
+        "target": "esnext",
+        "module": "esnext",
+        "moduleResolution": "Bundler",
         "lib": [
-            "es2021",
-            "dom"
-        ]
+            "esnext"
+        ],
+        "types": [
+            "node"
+        ],
+        "esModuleInterop": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "resolveJsonModule": true
     },
-    "include": [
-        "shared/**/*.ts",
-        "**/tests/**/*"
+    "exclude": [
+        "**/dist/**",
+        "**/node_modules/**"
     ]
 }
