--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -1,12 +1,12 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "rootDir": "src",
         "outDir": "dist"
     },
     "include": [
-        "src/**/*.ts",
-        "declarations.d.ts",
-        "./setup-jest.ts"
+        "**/*.ts"
+    ],
+    "exclude": [
+        "node_modules/**/*"
     ]
 }
