--- a/examples/astro-with-static-extraction/package.json
+++ b/examples/astro-with-static-extraction/package.json
@@ -11,11 +11,11 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/sitemap": "^3.0.5",
-        "astro": "^3.5.3"
+        "@astrojs/sitemap": "^3.1.1",
+        "astro": "^3.6.4"
     },
     "devDependencies": {
-        "@master/css-runtime": "workspace:^",
-        "@master/css-extractor.vite": "workspace:^"
+        "@master/css-extractor.vite": "workspace:^",
+        "@master/css-runtime": "workspace:^"
     }
 }
