--- a/examples/lit/package.json
+++ b/examples/lit/package.json
@@ -9,11 +9,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "lit": "^2.7.5",
-        "@master/css-runtime": "workspace:^"
+        "@master/css-runtime": "workspace:^",
+        "lit": "^2.8.0"
     },
     "devDependencies": {
-        "typescript": "^5.0.2",
-        "vite": "^5.0.0"
+        "typescript": "^5.3.3",
+        "vite": "^5.1.4"
     }
 }
