--- a/packages/css/tsconfig.prod.json
+++ b/packages/css/tsconfig.prod.json
@@ -1,6 +1,10 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "rootDir": "src"
-    }
+        "rootDir": "src",
+        "outDir": "dist",
+    },
+    "include": [
+        "src/**/*"
+    ]
 }
