Update tsconfig files for production build

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,9 +1,6 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "rootDir": "src"
-    },
-    "include": [
-        "src/**/*"
-    ]
+        "outDir": "dist"
+    }
 }
