--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -52,6 +52,7 @@
         "css-tree": "^2.3.1"
     },
     "devDependencies": {
+        "@types/css-tree": "^2.3.6",
         "css-shared": "workspace:^",
         "ts-jest": "^29.1.2"
     }
