--- a/packages/vscode-language-service/tsconfig.json
+++ b/packages/vscode-language-service/tsconfig.json
@@ -1,8 +1,6 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-    },
-    "include": [
-        "src/**/*"
-    ]
+        "outDir": "dist"
+    }
 }
