Update check-regexp in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,7 @@ jobs:
               with:
                   ref: ${{ github.ref }}
                   running-workflow-name: wait-for-check-regexp
-                  # todo: example-check
-                  check-regexp: lint|test|commit-check|type-check|e2e
+                  check-regexp: lint|test|commit-check|type-check|example-check|e2e
                   repo-token: ${{ secrets.GITHUB_TOKEN }}
                   wait-interval: 10
             - run: pnpm exec semantic-release
