--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,5 +2,10 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "dist"
-    }
+    },
+    "include": [
+        "src/**/*.ts",
+        "tests/**/*.test.ts",
+        "tests/**/test.ts"
+    ]
 }
