Add "type" field to package.json files

--- a/packages/class-variant/package.json
+++ b/packages/class-variant/package.json
@@ -1,5 +1,6 @@
 {
     "name": "class-variant",
+    "type": "module",
     "scripts": {
         "build": "techor build",
         "dev": "pnpm build --watch",
