--- a/packages/theme-service/package.json
+++ b/packages/theme-service/package.json
@@ -1,5 +1,6 @@
 {
     "name": "theme-service",
+    "type": "module",
     "scripts": {
         "build": "techor build",
         "dev": "pnpm build --watch",
