--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,25 @@
 {
     "compilerOptions": {
         "paths": {
-            "class-variant": [ "./node_modules/class-variant/src/index.ts" ],
-            "@master/css-cli": [ "./node_modules/@master/css-cli/src/index.ts" ],
-            "@master/create-css": [ "./node_modules/@master/create-css/src/index.ts" ],
-            "@master/css": [ "./node_modules/@master/css/src/index.ts" ],
+            "class-variant": [ "./node_modules/class-variant/src" ],
+            "@master/css-cli": [ "./node_modules/@master/css-cli/src" ],
+            "@master/create-css": [ "./node_modules/@master/create-css/src" ],
+            "@master/css": [ "./node_modules/@master/css/src" ],
             "@master/eslint-config-css": [ "./node_modules/@master/eslint-config-css" ],
-            "@master/eslint-plugin-css": [ "./node_modules/@master/eslint-plugin-css/src/index.ts" ],
-            "@master/css-extractor": [ "./node_modules/@master/css-extractor/src/index.ts" ],
-            "@master/css-extractor.vite": [ "./node_modules/@master/css-extractor.vite/src/index.ts" ],
-            "@master/css-extractor.webpack": [ "./node_modules/@master/css-extractor.webpack/src/index.ts" ],
-            "@master/css-language-server": [ "./node_modules/@master/css-language-server/src/index.ts" ],
-            "@master/css-language-service": [ "./node_modules/@master/css-language-service/src/index.ts" ],
+            "@master/eslint-plugin-css": [ "./node_modules/@master/eslint-plugin-css/src" ],
+            "@master/css-extractor": [ "./node_modules/@master/css-extractor/src" ],
+            "@master/css-extractor.vite": [ "./node_modules/@master/css-extractor.vite/src" ],
+            "@master/css-extractor.webpack": [ "./node_modules/@master/css-extractor.webpack/src" ],
+            "@master/css-language-server": [ "./node_modules/@master/css-language-server/src" ],
+            "@master/css-language-service": [ "./node_modules/@master/css-language-service/src" ],
             "@master/css.nuxt": [ "./node_modules/@master/css.nuxt/src/module.ts" ],
-            "@master/css.react": [ "./node_modules/@master/css.react/src/index.tsx" ],
-            "@master/css-runtime": [ "./node_modules/@master/css-runtime/src/index.ts" ],
-            "@master/css-server": [ "./node_modules/@master/css-server/src/index.ts" ],
-            "@master/css.svelte": [ "./node_modules/@master/css-svelte/src/lib/index.ts" ],
-            "@master/css-validator": [ "./node_modules/@master/css-validator/src/index.ts" ],
-            "@master/css.vue": [ "./node_modules/@master/css.vue/src/index.ts" ],
-            "theme-service": [ "./node_modules/theme-service/src/index.ts" ],
+            "@master/css.react": [ "./node_modules/@master/css.react/src" ],
+            "@master/css-runtime": [ "./node_modules/@master/css-runtime/src" ],
+            "@master/css-server": [ "./node_modules/@master/css-server/src" ],
+            "@master/css.svelte": [ "./node_modules/@master/css-svelte/src/lib" ],
+            "@master/css-validator": [ "./node_modules/@master/css-validator/src" ],
+            "@master/css.vue": [ "./node_modules/@master/css.vue/src" ],
+            "theme-service": [ "./node_modules/theme-service/src" ],
             "css-shared/*": [ "./node_modules/css-shared/*" ],
         },
         "target": "esnext",
@@ -36,7 +36,6 @@
         ],
         "esModuleInterop": true,
         "strict": true,
-        "skipLibCheck": true,
         "resolveJsonModule": true,
         "allowJs": true
     },
