--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css-cli",
     "scripts": {
-        "build": "techor build",
+        "build": "techor build \"src/**/*.ts\" --formats esm",
         "dev": "pnpm build --watch",
         "lint": "eslint ./src",
         "type-check": "tsc --noEmit",
@@ -45,6 +45,7 @@
         "@techor/fs": "^3.0.14",
         "@techor/glob": "^3.0.14",
         "@techor/log": "^3.0.14",
+        "bytes": "^3.1.2",
         "chokidar": "^3.6.0",
         "commander": "^12.0.0",
         "explore-config": "^3.0.14",
