Update tsconfig.json files with include and skipLibCheck options

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -7,5 +7,9 @@
             "DOM",
             "DOM.Iterable"
         ]
-    }
+    },
+    "include": [
+        "src/**/*.tsx",
+        "e2e/**/*.tsx"
+    ]
 }
