--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
         "esModuleInterop": true,
         "strict": true,
         "resolveJsonModule": true,
-        "allowJs": true
+        "allowJs": true,
+        "skipLibCheck": true
     },
     "exclude": [
         "**/dist/**",
