--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "build": "rm -rf ./dist && pnpm run \"/^build:.*/\"",
         "build:main": "techor build \"src/**/*.ts\" --no-clean",
-        "build:worker": "techor build \"src/**/*.worker.cjs\" --formats cjs --no-clean",
+        "build:worker": "techor build \"src/**/*.worker.js\" --formats cjs --no-clean",
         "dev": "pnpm build --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
@@ -58,8 +58,9 @@
         "@angular-eslint/template-parser": "^16.3.1",
         "@swc-node/register": "^1.8.0",
         "@types/node": "^20.11.20",
-        "@typescript-eslint/parser": "^6.21.0",
-        "@typescript-eslint/utils": "^6.21.0",
+        "@typescript-eslint/parser": "^7.0.2",
+        "@typescript-eslint/rule-tester": "^7.0.2",
+        "@typescript-eslint/utils": "^7.0.2",
         "eslint": "^8.57.0",
         "eslint-plugin-markdown": "^3.0.1",
         "eslint-plugin-mdx": "^2.3.4",
