Add provenance to publishConfig

--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -42,6 +42,7 @@
         "dist"
     ],
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "provenance": true
     }
 }
