--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -58,6 +58,7 @@
         "dist"
     ],
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "provenance": true
     }
 }
