--- a/.github/workflows/sync-dev-branches.yml
+++ b/.github/workflows/sync-dev-branches.yml
@@ -10,7 +10,7 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - name: Techor Actions
-              uses: techor-dev/techor@v2.5.17
+              uses: techor-dev/techor@main
               with:
                   action: "sync-dev-branches"
               env:
