New: Master Colors

--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -63,6 +63,7 @@
         "provenance": true
     },
     "dependencies": {
+        "@master/colors": "rc",
         "@master/normal.css": "workspace:^",
         "@techor/extend": "^3.0.16"
     },
