Update import statements to use @master/styled.react

--- a/examples/eslint/package.json
+++ b/examples/eslint/package.json
@@ -2,10 +2,9 @@
     "name": "master-css-eslint-example",
     "devDependencies": {
         "@angular-eslint/template-parser": "^16.3.1",
-        "@master/css-runtime": "workspace:^",
-        "@master/css.react": "workspace:^",
         "@master/eslint-config-css": "workspace:^",
         "@master/eslint-plugin-css": "workspace:^",
+        "@master/styled.react": "^2.0.1",
         "@typescript-eslint/parser": "^6.21.0",
         "clsx": "^2.1.0",
         "eslint": "^8.57.0",
