--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,71 +1,70 @@
 {
-	"name": "@master/css.svelte",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build && pnpm run package",
-		"preview": "vite preview",
-		"package": "svelte-kit sync && svelte-package && publint",
-		"prepublishOnly": "pnpm run package",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"e2e": "playwright test -c e2e/playwright-ct.config.ts"
-	},
-	"license": "MIT",
-	"description": "Integrate Master CSS in Svelte way",
-	"author": "Aoyue Design LLC.",
-	"funding": "https://css.master.co/docs/donate",
-	"homepage": "https://css.master.co",
-	"bugs": {
-		"url": "https://github.com/master-co/css/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/master-co/css.git",
-		"directory": "packages/svelte"
-	},
-	"keywords": [
-		"svelte",
-		"providers",
-		"css",
-		"mastercss"
-	],
-	"sideEffects": false,
-	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
-		}
-	},
-	"files": [
-		"dist",
-		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*"
-	],
-	"publishConfig": {
-		"access": "public",
-		"provenance": true
-	},
-	"peerDependencies": {
-		"svelte": "^4.0.0"
-	},
-	"dependencies": {
-		"@master/css-runtime": "workspace:^",
-		"theme-service": "workspace:^"
-	},
-	"devDependencies": {
-		"@playwright/experimental-ct-svelte": "^1.41.2",
-		"@sveltejs/adapter-auto": "^3.1.1",
-		"@sveltejs/kit": "^2.5.1",
-		"@sveltejs/package": "^2.2.7",
-		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"publint": "^0.1.16",
-		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.4",
-		"tslib": "^2.6.2",
-		"typescript": "^5.3.3",
-		"vite": "^5.1.4"
-	}
+    "name": "@master/css.svelte",
+    "type": "module",
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build && pnpm run package",
+        "preview": "vite preview",
+        "package": "svelte-kit sync && svelte-package && publint",
+        "prepublishOnly": "pnpm run package",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "e2e": "playwright test -c e2e/playwright-ct.config.ts"
+    },
+    "license": "MIT",
+    "description": "Integrate Master CSS in Svelte way",
+    "author": "Aoyue Design LLC.",
+    "funding": "https://css.master.co/docs/donate",
+    "homepage": "https://css.master.co",
+    "bugs": {
+        "url": "https://github.com/master-co/css/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/master-co/css.git",
+        "directory": "packages/svelte"
+    },
+    "keywords": [
+        "svelte",
+        "providers",
+        "css",
+        "mastercss"
+    ],
+    "sideEffects": false,
+    "svelte": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "svelte": "./dist/index.js"
+        }
+    },
+    "files": [
+        "dist",
+        "!dist/**/*.test.*",
+        "!dist/**/*.spec.*"
+    ],
+    "publishConfig": {
+        "access": "public",
+        "provenance": true
+    },
+    "peerDependencies": {
+        "svelte": "^4.0.0"
+    },
+    "dependencies": {
+        "@master/css-runtime": "workspace:^"
+    },
+    "devDependencies": {
+        "@playwright/experimental-ct-svelte": "^1.42.1",
+        "@sveltejs/adapter-auto": "^3.1.1",
+        "@sveltejs/kit": "^2.5.2",
+        "@sveltejs/package": "^2.2.7",
+        "@sveltejs/vite-plugin-svelte": "^3.0.2",
+        "publint": "^0.1.16",
+        "svelte": "^4.2.12",
+        "svelte-check": "^3.6.6",
+        "tslib": "^2.6.2",
+        "typescript": "^5.3.3",
+        "vite": "^5.1.4"
+    }
 }
