Move Master Normal CSS to "master-co/normal.css"

--- a/examples/blank/package.json
+++ b/examples/blank/package.json
@@ -13,7 +13,6 @@
         "vite": "^5.1.4"
     },
     "dependencies": {
-        "@master/css-runtime": "workspace:^",
-        "@master/normal.css": "workspace:^"
+        "@master/css-runtime": "workspace:^"
     }
 }
