--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,7 @@
         "type-check": "tsc --noEmit"
     },
     "dependencies": {
-        "@firebase/firestore": "^4.4.2",
+        "@firebase/firestore": "^4.4.3",
         "@master/css": "workspace:^",
         "@master/css-cli": "workspace:^",
         "@master/css-extractor": "workspace:^",
@@ -20,13 +20,13 @@
         "@master/eslint-config-css": "workspace:^",
         "@master/eslint-plugin-css": "workspace:^",
         "@master/styled.react": "^2.0.1",
-        "@master/theme-mode.react": "^1.0.0",
+        "@master/theme-mode.react": "^1.1.0",
         "@monaco-editor/react": "^4.6.0",
         "@tabler/icons-react": "^2.47.0",
         "@vercel/speed-insights": "^1.0.10",
         "accept-language": "^3.0.18",
         "clone-deep": "^4.0.1",
-        "eslint-config-next": "^14.1.0",
+        "eslint-config-next": "^14.1.1",
         "monaco-editor": "^0.45.0",
         "monaco-editor-textmate": "^4.0.0",
         "monaco-textmate": "^3.0.1",
@@ -36,6 +36,7 @@
         "react-countup": "^6.5.0",
         "react-dom": "^18.2.0",
         "react-intersection-observer": "^9.8.1",
+        "theme-mode": "^1.1.0",
         "websites": "workspace:../../.."
     },
     "devDependencies": {
@@ -43,8 +44,8 @@
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
         "@types/jest": "^29.5.12",
-        "@types/node": "^20.11.20",
-        "@types/react": "^18.2.58",
+        "@types/node": "^20.11.24",
+        "@types/react": "^18.2.61",
         "@types/react-dom": "^18.2.19",
         "eslint": "^8.57.0",
         "jest": "^29.7.0",
