--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@firebase/firestore": "^4.4.3",
+        "@master/colors": "rc",
         "@master/css": "workspace:^",
         "@master/css-cli": "workspace:^",
         "@master/css-extractor": "workspace:^",
@@ -19,12 +20,14 @@
         "@master/css.react": "workspace:^",
         "@master/eslint-config-css": "workspace:^",
         "@master/eslint-plugin-css": "workspace:^",
+        "@master/normal.css": "^2.0.0",
         "@master/styled.react": "^2.0.1",
         "@master/theme-mode.react": "^1.1.0",
         "@monaco-editor/react": "^4.6.0",
         "@tabler/icons-react": "^2.47.0",
         "@vercel/speed-insights": "^1.0.10",
         "accept-language": "^3.0.18",
+        "class-variant": "^2.0.1",
         "clone-deep": "^4.0.1",
         "eslint-config-next": "^14.1.1",
         "monaco-editor": "^0.45.0",
