--- a/examples/blank/package.json
+++ b/examples/blank/package.json
@@ -13,6 +13,7 @@
         "vite": "^5.1.4"
     },
     "dependencies": {
-        "@master/css-runtime": "workspace:^"
+        "@master/css-runtime": "workspace:^",
+        "@master/normal.css": "^2.0.0"
     }
 }
