--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@google-cloud/storage": "^7.7.0",
+        "@master/normal.css": "^2.0.0",
         "@swc-node/jest": "^1.7.0",
         "@techor/fs": "^3.0.16",
         "@techor/glob": "^3.0.16",
