Update dependencies to latest versions

--- a/website/package.json
+++ b/website/package.json
@@ -33,7 +33,7 @@
         "monaco-editor": "^0.45.0",
         "monaco-editor-textmate": "^4.0.0",
         "monaco-textmate": "^3.0.1",
-        "next": "14.1.0",
+        "next": "^14.1.1",
         "parent-module": "^3.1.0",
         "react": "^18.2.0",
         "react-countup": "^6.5.0",
