--- a/website/package.json
+++ b/website/package.json
@@ -40,6 +40,7 @@
         "react-dom": "^18.2.0",
         "react-intersection-observer": "^9.8.1",
         "theme-mode": "^1.1.0",
+        "uvcanvas": "^0.2.1",
         "websites": "workspace:../../.."
     },
     "devDependencies": {
