--- a/website/package.json
+++ b/website/package.json
@@ -21,19 +21,20 @@
         "@master/eslint-config-css": "workspace:^",
         "@master/eslint-plugin-css": "workspace:^",
         "@master/normal.css": "^2.0.0",
-        "@master/styled.react": "^2.0.1",
+        "@master/styled.react": "^2.0.2",
         "@master/theme-mode.react": "^1.1.0",
         "@monaco-editor/react": "^4.6.0",
+        "@next/mdx": "^14.1.3",
         "@tabler/icons-react": "^2.47.0",
         "@vercel/speed-insights": "^1.0.10",
         "accept-language": "^3.0.18",
-        "class-variant": "^2.0.1",
+        "class-variant": "^2.0.2",
         "clone-deep": "^4.0.1",
-        "eslint-config-next": "^14.1.1",
+        "eslint-config-next": "^14.1.3",
         "monaco-editor": "^0.45.0",
         "monaco-editor-textmate": "^4.0.0",
         "monaco-textmate": "^3.0.1",
-        "next": "^14.1.1",
+        "next": "^14.1.3",
         "parent-module": "^3.1.0",
         "react": "^18.2.0",
         "react-countup": "^6.5.0",
@@ -48,12 +49,12 @@
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
         "@types/jest": "^29.5.12",
-        "@types/node": "^20.11.24",
-        "@types/react": "^18.2.61",
-        "@types/react-dom": "^18.2.19",
+        "@types/node": "^20.11.25",
+        "@types/react": "^18.2.64",
+        "@types/react-dom": "^18.2.21",
         "eslint": "^8.57.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "typescript": "^5.3.3"
+        "typescript": "^5.4.2"
     }
 }
