--- a/packages/eslint-plugin/tsconfig.json
+++ b/packages/eslint-plugin/tsconfig.json
@@ -5,8 +5,6 @@
         "strict": false
     },
     "include": [
-        "src/**/*.ts",
-        "tests/**/*.test.ts",
-        "tests/**/test.ts"
+        "src/**/*.ts"
     ]
 }
