--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -52,21 +52,22 @@
         "svelte": "^4.0.0"
     },
     "dependencies": {
+        "@master/css": "workspace:^",
         "@master/css-runtime": "workspace:^"
     },
     "devDependencies": {
         "@master/css-server": "workspace:^",
-        "@playwright/experimental-ct-svelte": "^1.41.2",
-        "@playwright/test": "1.41",
+        "@playwright/experimental-ct-svelte": "1.41.2",
+        "@playwright/test": "1.41.2",
         "@sveltejs/adapter-auto": "^3.1.1",
-        "@sveltejs/kit": "^2.5.2",
-        "@sveltejs/package": "^2.2.7",
+        "@sveltejs/kit": "^2.5.4",
+        "@sveltejs/package": "^2.3.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.2",
         "publint": "^0.1.16",
         "svelte": "^4.2.12",
-        "svelte-check": "^3.6.6",
+        "svelte-check": "^3.6.7",
         "tslib": "^2.6.2",
-        "typescript": "^5.3.3",
-        "vite": "^5.1.4"
+        "typescript": "^5.4.2",
+        "vite": "^5.1.6"
     }
 }
