--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "runtimeExecutable": "${execPath}",
             "args": [
-                "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode-language-service"
+                "--extensionDevelopmentPath=${workspaceFolder}/packages/language-service.vscode"
             ]
         }
     ]
